# pythonDjango

./: db.sqlite3  manage.py  pyproject.toml  replit.nix
CM-main/: db.sqlite3  ex.py
CM-main/club/: admin.py  models.py  views.py
CM-main/club/migrations/: 0002_club_slug.py
CM-main/club_manager/: urls.py
CM-main/members/: admin.py  models.py
CM-main/members/migrations/: 0001_initial.py  0004_alter_member_team_alter_memberteam_team.py  0005_alter_member_team_alter_memberteam_member.py
CM-main/templates/: base.html
CM-main/templates/club/: detail.html  index.html
CM-main/users/migrations/: 0001_initial.py
club/: use_cases.py  views.py
club/migrations/: 0001_initial.py  0003_generate_slugs_for_clubs.py  0004_alter_club_slug.py
club_manager/: settings.py
matches/: admin.py  models.py
matches/migrations/: 0001_initial.py  0002_call.py
members/: models.py
members/migrations/: 0002_alter_team_club.py  0003_alter_memberteam_member_alter_memberteam_team.py
templates/club/: detail.html
